Fix radio buttons and adjust section content alignment - fixed radio buttons to respond correctly - fixed section content alighment to make them look cleaner

--- a/src/index.css
+++ b/src/index.css
@@ -21,9 +21,6 @@ th, td {
   border: 1px solid black;
 }
 
-div .information_text_area {
-  height: 170px;
-}
 
 .information_text_area {
   height: max-content;
