--- a/src/styles.css
+++ b/src/styles.css
@@ -69,11 +69,15 @@
     /* display: flex; */
     /* border: 1px solid #b30505; */
     font-size: x-small;
+    width: 500px;
+    text-align: left;
   }
 
   .form-section-po-container {
     /* border: 1px solid #000; */
     margin: 5px;
+    width: 500px;
+    text-align: left;
   }
 
   .form-section-ao-radio-container {
@@ -85,7 +89,8 @@
   .form-section-po-ao-container {
     display: flex; 
     /* border: 1px solid #000; */
-    margin: 5px;
+    margin: 10px 35px 10px 10px;
+    width: 400px;
   }
 
   .form-section-radio-button-container {
@@ -96,7 +101,7 @@
 
   .form-section-info-container {
     /* border: 1px solid #000; */
-    margin: 5px;
+    display: flex;
   }
 
   .information_text_area {
@@ -104,6 +109,7 @@
     top: 0;
     bottom: 0;
     width: 100%; */
+    height: 100%;
   }
 
   /* export button style */
